--- a/index.html
+++ b/index.html
@@ -197,13 +197,15 @@
       <img src="./images/morgane-le-breton-_Dxo54uYMfo-unsplash.jpg" alt="Circular Image">
     </div>
         <div class="text">
-        <p class="text-neutral-50 font-serif text-2xl text-semibold">"Cities have distinct personalities, and New York's is unmistakable. 
+        <p class="text-neutral-50 font-serif text-2xl font-extrabold">"Cities have distinct personalities, and New York's is unmistakable. 
         The pulsating energy of the streets, the towering skyscrapers, and the incredible mix of cultures make it a city unlike any other. 
         In New York, dreams are woven into the very fabric of the city, and every street corner tells a unique story. 
         It's a place where art, culture, and ambition collide to create an atmosphere that is both exhilarating and inspiring. 
         New York, to me, is the ultimate manifestation of the American spirit - a city where anything is possible."
         <br>
-        <span style="color: rgb(247, 243, 244); font-size: 30px;">-Oprah Winfrey</span></p></p>
+        <br>
+        <span style="color: rgb(247, 243, 244); font-size: 30px;">-Oprah Winfrey</span></p>
+        <a href="#contact" class="flex justify-center items-center"><img class="w-20 hover:translate-y-4 transition-all justify-items-center" src="./images/down.svg" alt="down arrow" /></a>
         </div>
     </div>
     </section>
@@ -222,12 +224,15 @@
           <img src="./images/malte-schmidt-enGr5YbjQKQ-unsplash.jpg" alt="Image 2" id="image-6">
           <img src="./images/meric-dagli-slapbg2mejw-unsplash.jpg" alt="Image 3" id="image-7">
           <img src="./images/matthew-lejune-rGP2kkzJCbA-unsplash.jpg" alt="Image 4" id="image-8">
+          <img src="./images/rodrigo-summer-dW_Pv0Lb4xo-unsplash.jpg" alt="Image 4" id="image-9">
+          <img src="./images/jonathan-pease-mt1XnBeaQEE-unsplash.jpg" alt="Image 4" id="image-10">
+          <img src="./images/andre-benz-_T35CPjjSik-unsplash.jpg" alt="Image 4" id="image-11">
         </div>
       </div>
       <img class="arrow right-arrow" src="./images/right-arrow.png" alt="Right Arrow" onclick="nextImages()" id="right-arrow">
     </section>
     
-    <section class="h-screen w-screen relative overflow-hidden">
+    <section class="h-screen w-screen relative overflow-hidden" id="contact">
       <img
         src="./images/benjamin-gremler-qONhYBVNz1c-unsplash.jpg"
         alt="new york pic"
